--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "build": "^0.1.4",
     "chart.js": "^3.8.0",
     "core-js": "^3.8.3",
     "highcharts-vue": "^1.4.0",
