--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "chart.js": "^3.8.0",
     "core-js": "^3.8.3",
     "highcharts-vue": "^1.4.0",
+    "swiper": "^8.4.5",
     "vue": "^3.2.13",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-chart-3": "^3.1.8",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
